--- a/trunk/promotion/development/PiSi.lyx
+++ b/trunk/promotion/development/PiSi.lyx
@@ -177,7 +177,7 @@ A source package consists of a setup, build and compilation script called
 \end_layout
 
 \begin_layout Subsection*
-Simplicity
+Simple by Design
 \end_layout
 
 \begin_layout Standard
