--- a/trunk/promotion/development/PiSi.lyx
+++ b/trunk/promotion/development/PiSi.lyx
@@ -697,24 +697,42 @@ PiSi supports both source and binary repositories.
 \end_layout
 
 \begin_layout Standard
-The source packages of Pardus are kept and developed at our svn repositories.
- Svn repositories are also used as source repositories by PiSi.
- 
+The source packages of Pardus are developed at our svn repositories.
+\begin_inset LatexCommand \cite{key-73}
+
+\end_inset
+
+ The svn repositories are also used as source repositories.
 \end_layout
 
 \begin_layout Standard
-The binary packages are kept at our binary repositores.
- When new package releases are available, the Buildfarm creates binary packages
- out of the source repository and moves them to the corresponding binary
- repositories.
+The binary packages are kept at our binary repositories.
  
+\begin_inset LatexCommand \cite{key-74}
+
+\end_inset
+
+ When new package releases are committed; the Buildfarm creates binary packages
+ from source repositories and moves them to the corresponding binary repositorie
+s.
+ Buildfarm package queue is managed manually by the repository administrators.
 \end_layout
 
 \begin_layout Standard
-The source and binary repositories are represented by index files named
- pisi-index.xml.
- They are created by PiSi's command line interface.
- 
+The source and binary repositories are represented by an their index files
+ named pisi-index.xml.
+ Both created by PiSi's index command executed from the root of the repository.
+ The index command creates a pisi-index.xml file out of that repository tree.
+ Adding new repositories to PiSi is as simple as:
+\end_layout
+
+\begin_layout LyX-Code
+pisi add-repo contrib http://paketler.pardus.org.tr/contrib/pisi-index.xml.bz2
+\end_layout
+
+\begin_layout LyX-Code
+pisi add-repo pardus-2007-sources http://svn.pardus.org.tr/pardus/2007/pisi-index.xm
+l.bz2
 \end_layout
 
 \begin_layout Subsection*
@@ -722,13 +740,17 @@ Building and Emerging of Packages
 \end_layout
 
 \begin_layout Standard
-With remote source repositories it is possible to build a package by only
- giving its name.
- 
+In the example above, we have added a source repository named pardus-2007-source
+s.
+ The given repository name is arbitrary.
 \end_layout
 
 \begin_layout Standard
-Here is an example to build a package that exists in a source repository:
+After adding a source repository we have many options to work with the source
+ packages.
+ First of all since we have all the source package informations from a repositor
+y, we can simply build any package by giving the name of the package as
+ in:
 \end_layout
 
 \begin_layout LyX-Code
@@ -736,13 +758,56 @@ Here is an example to build a package that exists in a source repository:
 \end_layout
 
 \begin_layout Standard
-It is also possible to build a package by providing the remote url of the
- spec file without having any source repository added to PiSi database.
+The build command will fetch the original source archive, the patches provided
+ by the source package, additional files and comar scripts to a temporary
+ location.
+ If there are missing build dependencies, to satisfy, PiSi will try to install
+ them.
+ After building the binary kiki-x-y-z.pisi package will be ready.
+\end_layout
+
+\begin_layout Standard
+The build process is divided into multiple steps.
+ For example, you may not want to build the binary package but just to see
+ the source code of the software provided with that package.
+ Or you want to work on that code and try multiple builds until you are
+ finished and then continue to other steps of the binary package creation
+ operation.
+ The build command steps are: fetch, unpack, setup, build, install, package.
+ Fetch step just, fetches the source tarball of the package.
+ Unpack step extracts the archive and then applies any existing patches.
+ setup, build and install are the actual building steps.
+ The last step, package, is the one that creates the binary 
+\begin_inset Quotes erd
+\end_inset
+
+.pisi
+\begin_inset Quotes erd
+\end_inset
+
+ package.
+ As an example to unpack a package, you do:
+\end_layout
+
+\begin_layout LyX-Code
+# pisi build --unpack kiki
+\end_layout
+
+\begin_layout Standard
+The source packages are extracted and compiled under /var/pisi directory.
+ The output binary package will be written to the current working directory.
+\end_layout
+
+\begin_layout Standard
+The great thing is that you don't need a source repository to work with
+ source packages.
+ It is possible to build a package by providing the remote url of the spec
+ file without having any source repository added to PiSi database.
  
 \end_layout
 
 \begin_layout Standard
-Here is an example to build the same package by providing its url:
+Here is an example to build the same package by providing only its url:
 \end_layout
 
 \begin_layout LyX-Code
@@ -750,17 +815,15 @@ Here is an example to build the same package by providing its url:
 \end_layout
 
 \begin_layout Standard
-The building process tries to install all the buildtime dependencies of
- the package by looking at the spec file.
-\end_layout
-
-\begin_layout Standard
 One other feature of PiSi is its ability to emerge source packages from
  the source repositories.
  By emerging, PiSi automatically downloads the buildtime and runtime dependencie
 s of the package.
- If it does not exist in any binary repository, it tries to emerge that
- package from source repositories.
+ If they do not exist in any binary repository, PiSi also tries to emerge
+ those missing dependencies from the source repositories.
+ Because a source repository is represented by the index file and building
+ a package by its remote url is possible, for emerging a source package,
+ PiSi does not need all the source repository packages to be downloaded.
 \end_layout
 
 \begin_layout Standard
@@ -768,7 +831,7 @@ Here is an example to emerge a package:
 \end_layout
 
 \begin_layout LyX-Code
-# pisi emerge kiki 
+# pisi emerge kiki
 \end_layout
 
 \begin_layout Subsection*
@@ -893,6 +956,18 @@ http://tukaani.org/lzma/
 
 \bibitem {key-72}
 http://en.wikipedia.org/wiki/Topological_sort
+\end_layout
+
+\begin_layout Bibliography
+
+\bibitem {key-73}
+http://svn.pardus.org.tr/pardus/2007/
+\end_layout
+
+\begin_layout Bibliography
+
+\bibitem {key-74}
+http://paketler.pardus.org.tr/pardus-2007/
 \end_layout
 
 \end_body
